--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,15 @@
     "version": 1,
     "name": "project-iii-back",
     "builds": [
-      { "src": "index.js", "use": "@vercel/node" }
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/index.js" }
+        {
+            "src": "/(.*)",
+            "dest": "/index.js"
+        }
     ]
-  }
+}
