--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.5.0",
     "body-parser": "^1.20.1",
+    "client-sessions": "^0.8.0",
+    "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
