--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "uuid": "^9.0.0",
-    "webpack": "^5.75.0"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
