--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon --inspect index.js",
-    "build": "webpack --config webpack.dist.config.js"
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.5.0",
