--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --inspect index.js",
-    "build": "webpack --mode production"
+    "start": "nodemon --inspect index.js"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.5.0",
