--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --inspect index.js",
-    "start2": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo \"Do nothing\""
+    "start": "set NODE_ENV=development && nodemon --inspect index.js",
+    "build": "set NODE_ENV=production && nodemon --inspect index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+   
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.5.0",
